foto alineada y ajustada

--- a/index.html
+++ b/index.html
@@ -57,15 +57,16 @@
     </header>
 
     <div>
-        <div  class ="row content-center">             
-            <div class="col-auto text-center offset-sm-4">
-                <p>Somos la Primera Iglesia Bautista en Durango, </p>
-                <p>   con 120 años de historia en los que la presencia de Dios</p> 
-                <p> con nosotros ha sido una realidad.</p>
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail " src="./images/iglesia.jpg" alt="todos">
+        <div  class ="row content-center">  
+            <div class="container">
+                <img class="rounded float-left" src="./images/iglesia.jpg" alt="todos">
+                <div class="col-auto text-center offset-sm-4">
+                    <p>Somos la Primera Iglesia Bautista en Durango, </p>
+                    <p>   con 120 años de historia en los que la presencia de Dios</p> 
+                    <p> con nosotros ha sido una realidad.</p>  
                 </div>
-            </div>
+            </div>           
+            
        </div>
         <div class="container">
             <div class="row row-content">
