ready to finish

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> Recursos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Eventos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Oración</a></li>
+                    <li class="nav-item"><a class="nav-link" href="recursos.html"><span class="fa fa-info fa-lg"></span> Recursos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="eventos.html"><span class="fa fa-list fa-lg"></span> Eventos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="oracion.html"><span class="fa fa-address-card fa-lg"></span> Oración</a></li>
                 </ul>
                 
             </div>
@@ -121,9 +121,9 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Recursos</a></li>
-                        <li><a href="#">Eventos</a></li>
-                        <li><a href="#">Oración</a></li>
+                        <li><a href="recursos.html">Recursos</a></li>
+                        <li><a href="eventos.html">Eventos</a></li>
+                        <li><a href="oracion.html">Oración</a></li>
                     </ul>
                 </div>
                 <div class= "col-7 col-sm-5">
